<resources>
    <string name="app_name">BigOhTech Assignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">ID:</string>
    <string name="author">Author:</string>
    <string name="width">Width:</string>
    <string name="height">Height:</string>
    <string name="url">Url:</string>
</resources>