<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.UsersDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="500dp"
            android:src="@drawable/placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <TextView
            android:id="@+id/user_id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/id"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/user_id_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="TextView"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/user_id_text"
            app:layout_constraintStart_toEndOf="@+id/user_id_text"
            app:layout_constraintTop_toTopOf="@+id/user_id_text" />

        <TextView
            android:id="@+id/user_author_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/author"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/user_id_text" />

        <TextView
            android:id="@+id/user_author_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="TextView"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/user_author_text"
            app:layout_constraintStart_toEndOf="@+id/user_author_text"
            app:layout_constraintTop_toTopOf="@+id/user_author_text" />

        <TextView
            android:id="@+id/user_width_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/width"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/user_author_text" />

        <TextView
            android:id="@+id/user_width_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="TextView"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/user_width_text"
            app:layout_constraintStart_toEndOf="@+id/user_width_text"
            app:layout_constraintTop_toTopOf="@+id/user_width_text" />

        <TextView
            android:id="@+id/user_height_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/height"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/user_width_text" />

        <TextView
            android:id="@+id/user_height_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="TextView"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/user_height_text"
            app:layout_constraintStart_toEndOf="@+id/user_height_text"
            app:layout_constraintTop_toTopOf="@+id/user_height_text" />

        <TextView
            android:id="@+id/user_url_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/url"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/user_height_text" />

        <TextView
            android:id="@+id/user_url_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="TextView"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/user_url_text"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toEndOf="@+id/user_url_text"
            app:layout_constraintTop_toTopOf="@+id/user_url_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>